# raptor

./: .gitmodules  CMakeLists.txt
config/: raptor-sparseConfig.cmake.in
raptor/: CMakeLists.txt  par_strength.cpp  raptor.hpp
raptor/aggregation/: aggregate.hpp  candidates.hpp  mis.hpp  par_aggregate.hpp  par_candidates.cpp  par_candidates.hpp  par_mis.hpp  par_prolongation.hpp  prolongation.hpp
raptor/core/: CMakeLists.txt  matrix.hpp  matrix_traits.hpp  par_matrix.cpp  par_matrix.hpp  types.hpp  utilities.hpp
raptor/krylov/: bicgstab.hpp  cg.hpp  par_bicgstab.hpp  par_cg.hpp  partial_inner.hpp
raptor/multilevel/: level.hpp  multilevel.hpp  par_level.hpp  par_multilevel.hpp
raptor/precondition/: CMakeLists.txt  par_diag_scale.hpp  par_relax.cpp  par_relax.hpp  relax.cpp  relax.hpp
raptor/precondition/tests/: CMakeLists.txt  test_bsr_jacobi_aniso.cpp
raptor/profiling/: profile_comm.cpp
raptor/ruge_stuben/: CMakeLists.txt  cf_splitting.hpp  interpolation.cpp  interpolation.hpp  par_air_solver.cpp  par_air_solver.hpp  par_cf_splitting.cpp  par_cf_splitting.hpp  par_interpolation.cpp  par_interpolation.hpp  pyamg_utils.hpp
raptor/ruge_stuben/tests/: CMakeLists.txt  test_air.cpp
raptor/tests/: compare.hpp  par_compare.hpp
raptor/util/: CMakeLists.txt  writer.cpp  writer.hpp
raptor/util/linalg/: add.cpp  par_matmult.cpp
